# lang-jepa

./: .gitignore  README.md  main.py  main_decoder.py  main_encoder.py  params.json  pyproject.toml
configs/: README.md  base_lang_config.yaml  lang_model_base.yaml
src/: config.py  helper.py  monitor.py  train.py  train_decoder.py
src/common/: config.py  schedulers.py
src/common/datasets/: fineweb_edu.py
src/datasets/: decoder_dataset.py  fineweb_edu.py
src/datasets/utils/: sentence_splitting.py
src/decoder/: decoder_dataset.py  models.py  train.py
src/decoder/configs/: decoder_config.yaml
src/decoder/utils/: evaluation.py
src/encoder/: collator.py  mask_collator.py  models.py  train.py
src/encoder/configs/: base_lang_config.yaml
src/encoder/utils/: helper.py  monitor.py
src/masks/: lang_mask_collator.py
src/models/: text_transformer.py
src/utils/: logging.py  schedulers.py  tensors.py
